@@ -77,7 +77,6 @@ class File(Persistent, Implicit, PropertyManager,
 
     precondition=''
     size=None
-    alt=''
 
     manage_editForm  =DTMLFile('dtml/fileEdit',globals(),
                                Kind='File',kind='file')
@@ -115,7 +114,6 @@ class File(Persistent, Implicit, PropertyManager,
 
 
     _properties=({'id':'title', 'type': 'string'},
-                 {'id':'alt', 'type':'string'},
                  {'id':'content_type', 'type':'string'},
                  )
 
@@ -719,7 +717,7 @@ class Image(File):
     __implements__ = (WriteLockInterface,)
     meta_type='Image'
 
-
+    alt=''
     height=''
     width=''
 
@@ -738,6 +736,7 @@ class Image(File):
         )
 
     _properties=({'id':'title', 'type': 'string'},
+                 {'id':'alt', 'type':'string'},
                  {'id':'content_type', 'type':'string','mode':'w'},
                  {'id':'height', 'type':'string'},
                  {'id':'width', 'type':'string'},
